<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#708090"
    tools:context=".Login">

    <TextView
        android:id="@+id/txtSlogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/sign_in_to_your_crypzo_account"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="20dp"
        android:background="#566D7E"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/example_example_com"
        android:textColor="#87AFC7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtSlogan"
        android:inputType="text" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="20dp"
        android:background="#566D7E"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/your_password"
        android:textColor="#87AFC7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/edtEmail"
        android:inputType="" />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="260dp"
        android:layout_marginTop="50dp"
        android:text="@string/forgot_password"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="@+id/edtPassword"
        app:layout_constraintRight_toRightOf="@id/edtPassword"
        app:layout_constraintTop_toTopOf="@+id/edtPassword" />

    <Button
        android:drawableRight="@drawable/ic_baseline_arrow_forward_24"
        android:id="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:background="#87AFC7"
        android:backgroundTint="#87AFC7"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/btnSign_in"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/txtForgotPassword" />
    <TextView
        android:id="@+id/txtAccount"
        android:textColor="#87AFC7"
        android:text="@string/don_t_have_an_account_yet"
        android:layout_marginTop="80dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView

        android:layout_marginStart="20dp"
        android:layout_marginTop="80dp"
        android:text="@string/sign_up"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toRightOf="@+id/txtAccount"
        app:layout_constraintTop_toTopOf="@+id/btnSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>
