<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OTP"
    android:background="#708090">
    <TextView
        android:id="@+id/txtEnterOTP"
        android:textColor="@android:color/white"
        android:layout_marginTop="70dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="20sp"
        android:text="@string/enter_the_otp_sent_to_your_registered"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="30dp"
        android:text="@string/mobile_number"
        android:id="@+id/txtMobile"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtEnterOTP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edtOTP"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:layout_marginTop="50dp"
        android:background="#566D7E"
        android:textColor="#87AFC7"
        android:text="@string/otp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:importantForAutofill="no" />

    <Button
        android:drawableRight="@drawable/ic_baseline_arrow_forward_24"
        android:id="@+id/btnContinue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="#87AFC7"
        android:backgroundTint="#87AFC7"
        android:text="@string/continue_otp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edtOTP" />


</androidx.constraintlayout.widget.ConstraintLayout>