<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ForgotPassword"
    android:background="#708090">
    <TextView
        android:id="@+id/txtEnter"
        android:textColor="@android:color/white"
        android:layout_marginTop="70dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="20sp"
        android:text="@string/enter_your_recovery_email_address_to"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="30dp"
        android:text="@string/reset_your_password"
        android:id="@+id/txtReset"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/edtForgotEmail"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:paddingStart="10dp"
        android:layout_marginTop="50dp"
        android:background="#566D7E"
        android:textColor="#87AFC7"
        android:text="@string/example_example_com"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/txtReset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:importantForAutofill="no" />

    <Button
        android:drawableRight="@drawable/ic_baseline_arrow_forward_24"
        android:id="@+id/btnRequest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="#87AFC7"
        android:backgroundTint="#87AFC7"
        android:text="@string/request_otp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edtForgotEmail" />

</androidx.constraintlayout.widget.ConstraintLayout>