<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Keypad"
    android:background="#708090">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:orientation="horizontal"
        android:weightSum="6">
        <ImageView
            android:layout_weight="0.5"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:id="@+id/imgKeypadBack"
            android:src="@drawable/ic_baseline_arrow_back_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:textSize="17sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_weight="5"
            android:textColor="@android:color/white"
            android:text="Bitcoin"
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:layout_weight="0.5"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_baseline_show_chart_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <ImageView
        android:layout_marginTop="50dp"
        android:id="@+id/imgKeypad"
        android:src="@drawable/btc"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_width="350dp"
        android:layout_height="75dp"/>
    <LinearLayout
        android:id="@+id/linearLayout"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgKeypad"
        android:background="@android:color/holo_blue_light"
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:src="@drawable/buysell"
            android:layout_width="100dp"
            android:layout_height="20dp"/>
        <LinearLayout
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:id="@+id/lnKeyPad"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:text="BTC Volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="3dp"
                android:src="@drawable/line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="3dp"
                android:contentDescription="TODO" />
            <TextView
                android:layout_marginEnd="20dp"
                android:layout_gravity="right"
                android:text="@string/_1btc_10_000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"/>
            <TextView
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/price_per_btc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="3dp"
                android:src="@drawable/line"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginBottom="3dp"/>
            <TextView
                android:layout_marginEnd="20dp"
                android:layout_gravity="right"
                android:text="Balance = $5400.00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <Button
            android:id="@+id/btnKeypad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@android:color/darker_gray"
            android:backgroundTint="@android:color/darker_gray"
            android:text="@string/place_buy_order" />
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <ImageView
            android:layout_marginTop="365dp"
            android:src="@drawable/keypad"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>